--- a/css/reservation.css
+++ b/css/reservation.css
@@ -1,6 +1,6 @@
 /*HEADER*/
 .header {
-  background-image: url(/images/image_7-min-progressive.jpeg);
+  background-image: url(/images/reservation.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -44,25 +44,30 @@
 .wrapper_gallery {
   display: flex;
   justify-content: space-around;
-  margin: 50px 0;
+  margin: 50px auto;
+  flex-wrap: wrap;
+  max-width: 1400px;
 }
 
 .gallery_img {
-  width: 250px;
-  height: 390px;
+  width: 210px;
+  height: 340px;
   transition: 0.5s;
+  margin-top: 10px;
 }
 
 .gallery_img:hover {
-  transform: scale(1.2);
+  transform: scale(1.25);
   cursor: pointer;
 }
 
 .gallery_text {
+  margin: 0 auto;
   text-align: center;
   font-family: Sahitya;
   font-size: 36px;
   line-height: 56px;
+  max-width: 1200px;
 }
 
 .gallery_heading {
@@ -80,7 +85,7 @@
 
 /*FORM*/
 .container_form {
-  background-image: url(/images/reservation_form.png);
+  background-image: url(/images/reservation_form.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -263,6 +268,10 @@
 
   .gallery_img:hover {
     transform: none;
+  }
+
+  .wrapper_welcome {
+    margin-top: 200px;
   }
 }
 /*MOBILE PHONES*/
