--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
   --color-font: #f1f1f1;
   --color-background: #0d1217;
   --border-par: 3px solid #f1f1f1;
-  --border-set: 2px solid #0d1217;
+  --border-set: 3px solid #0d1217;
+  --border-hover: 2px solid gray;
+  --border-bottom-hover: 3px solid brown;
   --hover-view-color: gray;
   --hover-nav-color: brown;
   --button-color: #84df9e;
